mdapi/objects/Academy_Certificate__c.object
<CustomObject>
    <description>Controls data for certificates earned through the Academy</description>
    <fields>
        <fullName>Certificate_Sent_On__c</fullName>
        <inlineHelpText>Date when certificate was sent</inlineHelpText>
        <label>Certificate Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was the certificate sent?</inlineHelpText>
        <label>Certificate Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <inlineHelpText>Certification received by the Contact</inlineHelpText>
        <label>Certification</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>StorageCraft_Certified_Engineer</fullName>
                    <label>StorageCraft Certified Engineer</label>
                </value>
                <value>
                    <fullName>StorageCraft_Certified_Master_Engineer</fullName>
                    <label>StorageCraft Certified Master Engineer</label>
                </value>
                <value>
                    <fullName>StorageCraft_Sales_Professional</fullName>
                    <label>StorageCraft Certified Sales Professional</label>
                </value>
                <value>
                    <fullName>StorageCraft_Certified_Engineer_Offsite_Recovery</fullName>
                    <label>StorageCraft Certified Engineer-Offsite Recovery</label>
                </value>
                <value>
                    <fullName>StorageCraft_Certified_Professional</fullName>
                    <label>StorageCraft Certified Professional</label>
                </value>
                <value>
                    <fullName>StorageCraft_Certified_Specialist</fullName>
                    <label>StorageCraft Certified Specialist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The contact which has been certified</description>
        <inlineHelpText>Who received the certification</inlineHelpText>
        <label>Certified Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Academy Certificates</relationshipLabel>
        <relationshipName>Academy_Certificates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certified_Date__c</fullName>
        <inlineHelpText>Date when considered Certified</inlineHelpText>
        <label>Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account related to the Certified Contact</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Academy Certificates</relationshipLabel>
        <relationshipName>Academy_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dynamics_Id__c</fullName>
        <description>Related identifier in Dynamics</description>
        <externalId>true</externalId>
        <inlineHelpText>If from Dynamics, the related identifier</inlineHelpText>
        <label>Dynamics Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>When the certification ends, leave empty for never.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Contact pass the test?</inlineHelpText>
        <label>Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Raw_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCME_Practial_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCME Practial Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Certification</description>
        <formula>IF(Passed__c, 
    IF(OR(Expiration_Date__c == null, Expiration_Date__c &lt; Today()), 
        &apos;Expired&apos;, 
        IF (OR(TEXT(Certified_Contact__r.Status__c) == &apos;Left the company&apos;, 
               TEXT(Certified_Contact__r.Status__c) == &apos;Inactive&apos;), 
            &apos;Inactive&apos;, 
            &apos;Certified&apos;)), 
    &apos;Not Certified&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <inlineHelpText>When the test was taken</inlineHelpText>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <inlineHelpText>How the Contact was able to become certified</inlineHelpText>
        <label>Training Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Instructor_led</fullName>
                    <label>Instructor-led</label>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Tested_Out</fullName>
                    <label>Tested Out</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Academy Certificate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Certified_Contact__c</columns>
        <columns>Certification__c</columns>
        <columns>Certified_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Certificate_Sent_On__c</columns>
        <columns>Passed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>StorageCraft_Certified_Engineer</fullName>
        <columns>NAME</columns>
        <columns>Certification__c</columns>
        <columns>Certified_Contact__c</columns>
        <columns>Certified_Date__c</columns>
        <columns>Certificate_Sent_On__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Passed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Certification__c</field>
            <operation>equals</operation>
            <value>StorageCraft_Certified_Engineer</value>
        </filters>
        <label>StorageCraft Certified Engineer</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>STCA-{YYYY}{MM}{0000}</displayFormat>
        <label>Academy Certificate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academy Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>